--- a/src/package.json
+++ b/src/package.json
@@ -6,5 +6,8 @@
   "author": "Daniel Gasienica <daniel@gasienica.ch>",
   "dependencies": {
     "express": "3.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2"
   }
 }
